--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-name: Deploy Metrognome
+name: Web App Deployment
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install
-          
+
       - name: Build Project
         run: |
           npm run build
