✨support update and download

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -6,5 +6,9 @@
     "SplashScreen": {
       "launchAutoHide": false
     }
+  },
+  "server": {
+    "hostname": "tonys-studio.top",
+    "androidScheme": "https"
   }
 }
