--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metrognome",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Clean and simple metronome app",
   "type": "module",
   "keywords": [
@@ -13,9 +13,9 @@
     "start": "vite",
     "build": "vite build",
     "watch": "vite build --watch",
-    "preview": "vite preview",
     "sync": "npm run build && cap sync",
-    "open": "cap open android"
+    "open": "cap open android",
+    "publish": "python publish.py"
   },
   "dependencies": {
     "@capacitor-community/keep-awake": "^7.0.0",
