--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,10 +28,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
       
       - name: Install Dependencies
         run: |
           npm install
+
+      - name: Add Secret Files
+        env:
+          SECRET_JS: ${{ secrets.SECRET_JS }}
+        run: |
+          python scripts/pre_build.py
 
       - name: Build Project
         run: |
