--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metrognome",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "description": "Clean and simple metronome app",
   "type": "module",
   "keywords": [
@@ -15,7 +15,7 @@
     "watch": "vite build --watch",
     "sync": "npm run build && cap sync",
     "open": "cap open android",
-    "publish": "python scripts/publish.py"
+    "publish": "npm run build && python scripts/publish.py"
   },
   "dependencies": {
     "@capacitor-community/keep-awake": "^7.0.0",
