--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "@capacitor-community/keep-awake": "^7.0.0",
     "@capacitor/android": "^7.0.1",
-    "@capacitor/core": "^7.0.1",
-    "@capacitor/splash-screen": "latest"
+    "@capacitor/core": "^7.0.1"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
