--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metrognome",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Clean and simple metronome app",
   "type": "module",
   "keywords": [
@@ -15,6 +15,7 @@
     "watch": "vite build --watch",
     "sync": "npm run build && cap sync",
     "open": "cap open android",
+    "version": "python scripts/bump_version.py",
     "publish": "npm run build && python scripts/publish.py"
   },
   "dependencies": {
