--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@capacitor-community/keep-awake": "^7.0.0",
     "@capacitor/android": "^7.0.1",
-    "@capacitor/core": "^7.0.1"
+    "@capacitor/core": "^7.0.1",
+    "leancloud-storage": "^4.15.2"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
