🐛fix counter compatibility 🏷️bump version

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -8,7 +8,7 @@
     }
   },
   "server": {
-    "hostname": "tonys-studio.top",
+    "hostname": "metro.tonys-studio.top",
     "androidScheme": "https"
   }
 }
