🐛fix github action build

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Build Project
         run: |
           npm run build
+          python scripts/post_build.py
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
