--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,13 +38,10 @@ jobs:
         run: |
           npm install
 
-      - name: Add Secret Files
-        env:
-          SECRET_JS: ${{ secrets.SECRET_JS }}
-        run: |
-          python scripts/pre_build.py
-
       - name: Build Project
+        env:
+          VITE_BASE_URL=${{ vars.VITE_BASE_URL }}
+          VITE_WEB_URL=${{ vars.VITE_WEB_URL }}
         run: |
           npm run build
           python scripts/post_build.py
