--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "metrognome",
-  "version": "1.2.5",
-  "description": "Clean and simple metronome app",
-  "type": "module",
-  "keywords": [
-    "capacitor",
-    "mobile",
-    "metronome",
-    "music"
-  ],
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "watch": "vite build --watch",
-    "sync": "npm run build && cap sync",
-    "open": "cap open android",
-    "version": "python scripts/bump_version.py",
-    "publish": "python scripts/publish.py",
-    "deploy": "npm run build && pwsh deploy.ps1"
-  },
-  "dependencies": {
-    "@capacitor-community/keep-awake": "^7.0.0",
-    "@capacitor/android": "^7.0.1",
-    "@capacitor/core": "^7.0.1",
-    "leancloud-storage": "^4.15.2"
-  },
-  "devDependencies": {
-    "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "^7.0.1",
-    "vite": "^6.3.2"
-  },
-  "author": "Tony S.",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Lord-Turmoil/metrognome"
-  },
-  "bugs": {
-    "url": "https://github.com/Lord-Turmoil/metrognome/issues"
-  }
+    "name": "metrognome",
+    "version": "1.3.0",
+    "description": "Clean and simple metronome app",
+    "type": "module",
+    "keywords": [
+        "capacitor",
+        "mobile",
+        "metronome",
+        "music"
+    ],
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "format": "prettier --config .prettierrc *.ts src/**/*.ts --write",
+        "sync": "npm run build && cap sync",
+        "open": "cap open android",
+        "version": "python scripts/bump_version.py",
+        "deploy": "npm run build && pwsh deploy.ps1"
+    },
+    "dependencies": {
+        "@capacitor-community/keep-awake": "^7.1.0",
+        "@capacitor/android": "^7.0.1",
+        "@capacitor/core": "^7.0.1",
+        "leancloud-storage": "^4.15.2",
+        "mitt": "^3.0.1"
+    },
+    "devDependencies": {
+        "@capacitor/assets": "^3.0.5",
+        "@capacitor/cli": "^7.0.1",
+        "prettier": "^3.6.2",
+        "typescript": "^5.9.2",
+        "vite": "^6.3.2",
+        "vite-plugin-html-minifier": "^1.0.5"
+    },
+    "author": "Tony S.",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Lord-Turmoil/metrognome"
+    },
+    "bugs": {
+        "url": "https://github.com/Lord-Turmoil/metrognome/issues"
+    }
 }
