--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "../resources/icon.png",
+      "src": "../assets/icon-only.png",
       "sizes": "512x512",
       "type": "img/png"
     }
