🐛fix multiple issues
- layout issue on android
- server name on android
- fix font issue

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -8,7 +8,7 @@
     }
   },
   "server": {
-    "hostname": "com.zhengyaoliu.metrognome",
+    "hostname": "metrognome.zhengyaoliu.com",
     "androidScheme": "https"
   }
 }
